compiler/tools/fpp-syntax/test/illegal-character.ref.txt
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/illegal-character.fpp:1.1
%
^
error: invalid token: unicode value 37, hex 0x25
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/illegal-character.fpp:2.1
	
^
error: invalid token: unicode value 9, hex 0x9
note: embedded tab characters are not allowed in FPP source files
try configuring your editor to convert tabs to spaces
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/illegal-character.fpp:4.8
tok2 \ illegal
       ^
error: invalid token: expected line continuation
